fix(summary-card): reference `z-index`

--- a/src/components/SummaryCard/_mixins.scss
+++ b/src/components/SummaryCard/_mixins.scss
@@ -173,7 +173,7 @@
     display: flex;
     flex-direction: column;
     background-color: $ui-01;
-    z-index: z($layer: overlay);
+    z-index: $overlay--z-index;
     top: -($body--height - $carbon--spacing-05);
     bottom: $footer--height;
     right: 0;
